$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-24 (opened August 17, 2009)

	* spantree: first argument 'd' like in hclust()instead of 'dis'.
	Got a 'call' item so that update() works.

	* treedive & treeheight: accept 'spantree' objects. EXPERIMENTAL
	CHANGE THAT MAY BE CANCELLED.

	* treedist: average distance of species trees for two
	sites. Generalization of treedive(): builds a species tree of two
	sites and sees how much of the tree is shared between two sites,
	and how much is unique to the combination. The measure is similar
	to Jaccard index: the proportion of unique (unshared) tree of the
	combined tree. In principle, this is similar to UniFrac metric
	(C. Lozupone & R. Knight, Appl. Environ. Microbiol. 71:8225-8235;
	2005), but numerically and computationally different (and the
	current implementation may specify a new unpublished method). AN
	EXPERIMENTAL CHANGE THAT MAY BE CANCELLED.
	
Version 1.16-23 (closed August 17, 2009)

	* poolaccum: new function to find the extrapolated richness
	values (or specpool() estimates) for random accumulation of
	sites (with summary and plot methods). 

	* specaccum, specpool, specpool2vect and friends: index names are
	now all lower-case.

	* estaccumR: new function similar to 'poolaccum', but uses
	'estimateR' for individual (count) based estimates of extrapolated
	richness. Inherits from 'poolaccum' and shares its print, summary
	and plot methods. 
	
Version 1.16-22 (closed August 11, 2009)

	* metaMDS: accepts now user supplied dissimilarities either as a
	"dist" structure or as symmetric square matrix (Susan Letcher's
	wish). As a side effect, dissimilarity matrices are now correctly
	detected and will not be wrongly treated as raw data.

	* summary.cca: fix in 1.16-20 failed if all variables were
	continuous and there were no centroids of factor levels.
	
	* indpower: new function to calculate indicator power for a
	species (Halme et al. 2009, Cons. Biol. 23: 1008-1016)
