@@ -4,6 +4,13 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.16-24 (opened August 17, 2009)
 
+	* ordiellipse: does not depend on the 'ellipse' package, but finds
+	the coordinates of ellipse using the equation taken from the 'car'
+	package. However, this devel version of 'vegan' still must SUGGEST
+	'ellipse', because 'plot.MOStest' requires 'ellipse'. The current
+	release version does not include 'plot.MOStest' and could be
+	liberated from the 'ellipse' dependence.
+
 	* spantree: first argument 'd' like in hclust()instead of 'dis'.
 	Got a 'call' item so that update() works.
 
